Need to fix overflow of text

--- a/Faq-accordion-card-main/style.css
+++ b/Faq-accordion-card-main/style.css
@@ -83,7 +83,7 @@ body {
   height: 90%;
   flex-direction: column;
   justify-content: space-evenly;
-  overflow: hidden;
+  overflow-y: auto;
 }
 
 h1 {
